# cpp-template

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  conanfile.txt
cmake/: conan.cmake
src/: main.cpp
